src/config/grammar.txt
server {
    listen 8000;
    server_name main;
    root ./root;
    client_max_body_size 600m;

    error_page 404 /errors/404.html;
    error_page 500 /errors/500.html;

    index index.html;

    location /cgi {
        root ./root/cgi-bin;
        autoindex on;
        allow_methods GET POST;
    }

}

statement   ->  expression ;

expression  ->  serverContext (statement)* ;

serverContext   ->  "server" "{" ((directive)* (locationContext)*)+ "}" ;

locationContext ->  "location" (param)? "{" (directive)* "}" ;

directive       ->  directiveKey (param)+ ";";

directiveKey    ->  "listen" | "root" | "server_name" | "client_max_body_size"
                    | "error_page" | "index" | "autoindex" | "allow_methods" ;

param           ->  (STRING | NBR) param* ;












expression          ::= serverContext (serverContext)*

serverContext       ::= "server" "{" serverdirective insideBlock* "}"

insideBlock         ::=  locationContext | serverDirecitve

locationContext     ::= "location" locationParameter "{" locatoinDirective* "}"

serverDirective     ::= serverKeyword parameter+ ";"

locationDirective   ::=  locationKeyword parameter+ ";"

serverKeyword       ::= "listen" | "server_name" | "root" | "client_max_body_size" | "index" | "error_page"

locationDiretive    ::= "root" | "autoindex" | "allow_methods" | "client_max_body_size"

parameter           ::= ANY_PRINTABLE












program             ::=  stmt

stmt                ::=  serverContext serverContext*

serverContext       ::=  "server" block

block               ::= "{" (serverDirecitve param+ ";" | locationContext)* "}"

locationContext     ::= "listen" param+ "{" (locationDirective param+ ";")+ "}"

serverDirecitve     ::= "listen" | "server_name" | "client_max_body_size"
                        | "root" | "error_page"

locationDirective   ::= "autoindex" | "return" | "allow_methods" | "root"
                        | "error_page" | "client_max_body_size"

param               ::= ANY_PRINTABLE
